--- a/style.css
+++ b/style.css
@@ -5,57 +5,98 @@
     padding: 0;
 }
 
+body{
+    min-height: 100vh;
+}
+
 header{
     background-color: black;
     padding: 51px;
-    margin: auto;
+    text-align: center;
 }
 
 header > h1{
     font-family: 'passion one', sans-serif;
-    font-size: 88px;
+    font-size: 10vw;
     font-weight: bold;
     color: white;
+    padding-top: 50px;
+    font-variant: small-caps;
 }
 
 header > p, a{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
+    padding-bottom: 50px;
+}
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 main{
-    height: 100vh;
     font-family: 'Sriracha', sans-serif;
     font-size: 31px;
 }
 
-.conteudo{
-    display: flex;
-    height: 400px;
-    width: 300px;
-    background-color: white;
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-size: 3.5vw;
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 .imagem1{
-    height: 400px;
+    height: 60vh;
     background-image: url('imagens/background001.jpg');
     background-attachment: fixed;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 .imagem2{
-    height: 70%;
+    height: 60vh;
     background-image: url('imagens/background002.jpg');
     background-attachment: fixed;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.imagem1 .imagem2 > p{
+    display: inline-block;
+    padding: 5px;
+}
+
 .texto-img{
-    width: 40%;
-    background-color: rgba(0, 0, 0, 0.246);
+    width: 45vw;
+    height: 50vh;
+    background-color: rgba(0, 0, 0, 0.315);
     color: white;
+    text-shadow: 1px 1px 0px black;
+    padding: 5px;
+}
+
+.texto-img > p{
+    height: 40vh;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
 }
